[project]
name = "Barcode Htmltopdf"
version = "1.0.0"
description = "Code examples demonstrating IronPDF for Python Feature: Barcode Htmltopdf"
license = { file = "LICENSE" }
readme = "README.md"
homepage = "https://github.com/iron-software/IronPdfPython.Examples"
keywords = ["IronPDF for Python", "python", "Barcode Htmltopdf", "ironpdfpython.examples", "Code Example"]
dependencies = ["ironpdf==2024.11.1.4"]