[project]
name = "Multi Frame Tiff To Pdf"
version = "1.0.0"
description = "Code examples demonstrating IronPDF for Python Feature: Multi Frame Tiff To Pdf"
license = { file = "LICENSE" }
readme = "README.md"
homepage = "https://github.com/iron-software/IronPdfPython.Examples"
keywords = ["IronPDF for Python", "python", "Multi Frame Tiff To Pdf", "ironpdfpython.examples", "Code Example"]
dependencies = ["ironpdf==2024.11.1.4"]