[project]
name = "Using Html To Create A Pdf"
version = "1.0.0"
description = "Code examples demonstrating IronPDF for Python Feature: Using Html To Create A Pdf"
license = { file = "LICENSE" }
readme = "README.md"
homepage = "https://github.com/iron-software/IronPdfPython.Examples"
keywords = ["IronPDF for Python", "python", "Using Html To Create A Pdf", "ironpdfpython.examples", "Code Example"]
dependencies = ["ironpdf==2024.11.1.4"]