[project]
name = "Python Pdf To Image"
version = "1.0.0"
description = "Code examples demonstrating IronPDF for Python Feature: Python Pdf To Image"
license = { file = "LICENSE" }
readme = "README.md"
homepage = "https://github.com/iron-software/IronPdfPython.Examples"
keywords = ["IronPDF for Python", "python", "Python Pdf To Image", "ironpdfpython.examples", "How-To"]
dependencies = ["ironpdf==2024.11.1.4"]