[project]
name = "Use Ironpdfengine"
version = "1.0.0"
description = "Code examples demonstrating IronPDF for Python Feature: Use Ironpdfengine"
license = { file = "LICENSE" }
readme = "README.md"
homepage = "https://github.com/iron-software/IronPdfPython.Examples"
keywords = ["IronPDF for Python", "python", "Use Ironpdfengine", "ironpdfpython.examples", "How-To"]
dependencies = ["ironpdf==2024.11.1.4"]